--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
-DATABASE_URL='postgresql://postgres:joetel88@localhost:5432/Gift_card_verifier'
+DATABASE_URL=postgresql://postgres:joetel88@localhost:5432/Gift_card_verifier
 
 
-GMAIL_USER='giftsafer@gmail.com'
-GMAIL_APP_PASSWORD='uawa oqen ilxb atkn'
-CONTACT_EMAIL='giftsafer@gmail.com'
+MAILJET_API_KEY=xxxxxxxxxxxxxxxx
+MAILJET_SECRET_KEY=xxxxxxxxxxxxxxxx
+MAILJET_FROM_EMAIL=giftsafer@gmail.com
+MAILJET_FROM_NAME=Gift Safer
+CONTACT_EMAIL=giftsafer@gmail.com
