--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 DATABASE_URL=postgresql://postgres:joetel88@localhost:5432/Gift_card_verifier
 
 
-MAILJET_API_KEY=fed30dd7a699349556b7a2abb692962c
-MAILJET_SECRET_KEY=d7a70dbfa8320684c499fe72c9a12882
-MAILJET_FROM_EMAIL=giftsafer@gmail.com
+MAILJET_API_KEY=5f2a45c1234a4d1cc3747fda7bd1b0ec
+MAILJET_SECRET_KEY=98d1e74b7dc1a2f912bbfae55e23eabc
+MAILJET_FROM_EMAIL=Support@giftsafer.com
 MAILJET_FROM_NAME=Gift Safer
-CONTACT_EMAIL=giftsafer@gmail.com
+CONTACT_EMAIL=Support@giftsafer.com
